# ui-focused-os-agent

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt  taskfile.yaml
.github/workflows/: document_deploy.yml
dataflow/: README.md
dataflow/overview/: index.html
documents/docs/dataflow/: overview.md
documents/docs/getting_started/: quick_start.md
getting_started/quick_start/: index.html
learner/: README.md  __main__.py
model_worker/: README.md
record_processor/: README.md  __main__.py
record_processor/example/: .gitignore
search/: search_index.json
ufo/: __main__.py
ufo/config/: config.yaml.template
