[project]
name = "windows-ui-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.1",
    "beautifulsoup4>=4.12.3",
    "colorama>=0.4.6",
    "faiss-cpu>=1.8.0",
    "html2text>=2024.2.26",
    "langchain>=0.1.11",
    "langchain-community>=0.0.27",
    "lxml>=5.1.0",
    "msal>=1.25.0",
    "openai>=1.13.3",
    "pandas>=1.4.3",
    "pillow>=10.3.0",
    "psutil>=5.9.8",
    "pyautogui>=0.9.54",
    "pywin32>=306",
    "pywinauto>=0.6.8",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "sentence-transformers>=2.5.1",
    "uiautomation>=2.0.20",
]

[project.scripts]
main = "windows_ui_agent.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ufo"]
