[project]
name = "ufo"
version = "1.2.0"
description = "UFO is a UI-focused multi-agent framework designed to fulfill user requests on Windows OS by seamlessly navigating and operating within individual or multiple applications."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.1",
    "beautifulsoup4>=4.12.3",
    "colorama>=0.4.6",
    "faiss-cpu>=1.8.0",
    "html2text>=2024.2.26",
    "langchain>=0.1.11",
    "langchain-community>=0.0.27",
    "lxml>=5.1.0",
    "msal>=1.25.0",
    "openai>=1.13.3",
    "pandas>=1.4.3",
    "pillow>=10.3.0",
    "psutil>=5.9.8",
    "pyautogui>=0.9.54",
    "pywin32>=306",
    "pywinauto>=0.6.8",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "sentence-transformers>=2.5.1",
    "uiautomation>=2.0.20",
]

[project.scripts]
ufo = "ufo.__main__:main"
learner = "ufo.__main__:main"
record-processor = "record_processor.__main__:main"
dataflow = "dataflow.__main__:main"

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dataflow = ["*.yaml"]
ufo = ["*.yaml"]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.2",
]
